# gifs

./: .gitignore  ddp_train.py  generate.py
configs/: config_loader.py  shapenet_cars.txt
dataprocessing/: create_split.py  modified_preprocess.py
dataprocessing/intersection_detection/: CMakeLists.txt
models/: l_model_new.py
slurm_scripts/: run_ddptrain.sh  run_generate.sh  run_preprocess.sh  run_preprocessing.sh
